# toy-mt-framework

./: .gitignore  CMakeLists.txt  Makefile  Makefile_omp  Makefile_single  README  geantv_config.json
BusyWaitCalibration/: CMakeLists.txt  Makefile  busyWait.cpp  busyWait.h  busy_wait_scale_factor.cpp  busy_wait_scale_factor.h  main.cpp
CommonTestModules/: BusyWaitPassFilter.cpp  BusyWaitProducer.cpp  EventTimesBusyWaitParallelForPassFilter.cpp  EventTimesBusyWaitPassFilter.cpp  EventTimesBusyWaitTaskStealingParallelForPassFilter.cpp  EventTimesSleepingParallelForPassFilter.cpp  EventTimesSleepingPassFilter.cpp  EventTimesSleepingProducer.cpp  EventTimesSleepingTaskStealingParallelForPassFilter.cpp  EventTimesSyncGetPassFilterBase.cpp  EventTimesSyncGetProducerBase.cpp  FastPassFilter.cpp  SleepingPassFilter.cpp  SleepingProducer.cpp  SleepingWithAcquireProducer.cpp  ThreadSaferGetterFilter.cpp  thread_type_from_config.cpp
DispatchProcessingDemo/: CMakeLists.txt  Makefile  main.cpp
DispatchProcessingDemo/DispatchFrameworkCore/: ConfiguredFilter.h  DataCache.h  Event.cpp  Event.h  EventProcessor.cpp  EventProcessor.h  FactoryManager.h  Filter.cpp  Filter.h  FilterOnPathWrapper.cpp  FilterOnPathWrapper.h  FilterWrapper.cpp  FilterWrapper.h  Getter.cpp  Getter.h  GroupHolder.h  Module.cpp  Module.h  ModuleWrapper.cpp  ModuleWrapper.h  PassFilter.cpp  Path.cpp  Path.h  PathFilteringCallback.h  PrefetchAndWorkWrapper.cpp  PrefetchAndWorkWrapper.h  Producer.cpp  Producer.h  ProducerWrapper.cpp  ProducerWrapper.h  Queues.cpp  Schedule.cpp  Schedule.h  SimpleSource.cpp  SimpleSource.h  filtering_callback.h
DispatchProcessingDemo/DispatchTestModules/: EventTimesBusyWaitProducer.cpp  EventTimesSyncGetPassFilterBase.cpp  EventTimesSyncGetPassFilterBase.h  EventTimesSyncGetProducerBase.cpp  EventTimesSyncGetProducerBase.h  EventTimesSyncGetSleepingProducer.cpp  ThreadSafeProducer.h  ThreadSafeWhichReadsProducer.cpp  ThreadSafeWhichReadsProducer.h  ThreadSaferGetterFilter.h  Waiter.cpp  thread_type_from_config.h
DispatchProcessingDemo/DispatchUnitTests/: Event_test.cpp
OpenMPProcessingDemo/: CMakeLists.txt  Makefile  main.cpp
OpenMPProcessingDemo/OpenMPFrameworkCore/: DataCache.h  Event.cpp  Event.h  EventProcessor.cpp  EventProcessor.h  Factory.h  FactoryManager.h  FactoryManagers.cpp  Filter.cpp  Filter.h  FilterWrapper.cpp  FilterWrapper.h  Locks.cpp  Locks.h  Module.cpp  Module.h  ModuleThreadStack.cpp  ModuleThreadStack.h  ModuleWrapper.cpp  ModuleWrapper.h  OMPLock.h  Path.cpp  Path.h  Producer.cpp  Producer.h  ProducerWrapper.cpp  ProducerWrapper.h  Queues.cpp  Queues.h  Schedule.cpp  Schedule.h  SerialTaskQueue.cpp  SerialTaskQueue.h  SimpleSource.h  Source.h  TaskBase.h  TaskYieldLock.h  ThreadingHelpers.h  TimeMonitor.h  WaitingTask.h  (+4 more)
OpenMPProcessingDemo/OpenMPTestModules/: EventTimesPassFilterBase.cpp  PassFilter.h  ThreadSafeProducer.cpp  ThreadSafeWhichReadsProducer.h
OpenMPProcessingDemo/OpenMPUnitTests/: Event_test.cpp  SerialTaskQueue_test.cpp  WaitingTaskList_test.cpp
SingleThreadedProcessingDemo/: CMakeLists.txt  Makefile  main.cpp  test_config.json
SingleThreadedProcessingDemo/SingleThreadedFrameworkCore/: ConfiguredFilter.h  ConfiguredProducer.h  ErrorConditions.h  Event.cpp  Event.h  EventProcessor.cpp  EventProcessor.h  Factory.h  FactoryManager.h  Filter.cpp  Filter.h  Getter.cpp  Getter.h  Module.cpp  Module.h  Path.cpp  Path.h  Producer.cpp  Producer.h  Schedule.cpp  Schedule.h  Source.cpp  Source.h
SingleThreadedProcessingDemo/SingleThreadedTestModules/: BusyWaitPassFilter.cpp  BusyWaitProducer.cpp  EventTimesPassFilterBase.cpp  EventTimesProducerBase.cpp  EventTimesProducerBase.h  EventTimesSleepingPassFilter.cpp  EventTimesSleepingProducer.cpp  PassFilter.cpp  SleepingPassFilter.cpp  SleepingProducer.cpp  ThreadSaferGetterFilter.cpp
TBBProcessingDemo/: CMakeLists.txt  Makefile  filter_exception_config.json  main.cpp  producer_exception_config.json  simple_config.json  test_acquire_config.json  test_config.json
TBBProcessingDemo/TBBFrameworkCore/: ConcurrentTaskQueue.cpp  ConcurrentTaskQueue.h  ConfiguredProducer.h  DataCache.h  ErrorConditions.h  Event.cpp  Event.h  EventProcessor.cpp  EventProcessor.h  Factory.h  FactoryManager.h  FilterOnPathWrapper.cpp  FilterOnPathWrapper.h  FilterWrapper.cpp  FilterWrapper.h  Getter.cpp  Getter.h  Likely.h  Module.cpp  Module.h  ModuleThreadStack.cpp  ModuleThreadStack.h  ModuleWrapper.cpp  ModuleWrapper.h  Path.cpp  Path.h  PathFilteringCallback.h  PrefetchAndWorkWrapper.cpp  PrefetchAndWorkWrapper.h  Producer.h  ProducerWrapper.cpp  ProducerWrapper.h  Queues.cpp  Queues.h  Schedule.cpp  Schedule.h  SerialTaskQueue.cpp  SerialTaskQueue.h  SimpleSource.cpp  TaskBase.h  (+13 more)
TBBProcessingDemo/TBBTestModules/: EventTimesPassFilterBase.h  EventTimesProducerBase.cpp  EventTimesSyncGetProducerBase.cpp  EventTimesSyncGetSleepingPassFilter.cpp  FastProducer.cpp  GeantVProducer.cpp  ThrowingFilter.cpp  ThrowingProducer.cpp  Waiter.h
TBBProcessingDemo/TBBUnitTests/: Event_test.cpp  SerialTaskQueue_test.cpp  WaitingTaskList_test.cpp  main.cpp
cmake/Modules/: FindTBB.cmake
cms-data/: createConfig.py  createConfig_ave_times.py  generateConfig.py  reco_2018_data_displacedjet_busywait.config  reco_2018_data_displacedjet_sleeping.config  reco_hipileup_5_2_0_busywait_perfectIO.config  reco_hipileup_5_2_0_sleeping_perfectIO.config  reco_minbias_busywait.config  reco_minbias_busywait_imt.config  reco_minbias_busywait_perfectIO.config  reco_minbias_sleeping.config  reco_minbias_sleeping_betweenmodules.config  reco_minbias_sleeping_imt.config  reco_minbias_sleeping_perfectIO.config  reco_multijet_sleeping.config  transform_times.py
high-level-framework-talk/: .gitignore  flow.dot  framework.tex  makefile
measurePerformance/: createTestConfigs.py  runConfigs.py
omp_standalone_examples/: Readme.md  omp_bad_task_steal.cc  omp_other_thread.cc  omp_starved.cc  omp_unsafe.cc
